# -aegisgate-agent-firewall

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
policy/: memory-policy.md  outbound-policy.md  protected-data.md  risk-ladder.md  skill-install-policy.md  tool-policy.md
references/: adversarial-patterns.md  confirmation-templates.md  threat-model.md
scripts/: aegisgate_common.py  scan_outbound.py  scan_skill.py  scan_text.py  scan_tool_call.py
tests/: fake-tool-output.md  malicious-email.md  malicious-skill.md  memory-poisoning.md  poisoned-webpage.md  sequential-tool-chain.md
